--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/custom.css">
 
-    <title>Res Arcana Generator</title>
+    <title>Res Arcana Generator v1.0.0</title>
 </head>
 
 <body>
